EKS/eks-basic-ingress/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worldskills-front-service
  namespace: wsi-web
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: cloudskills-front-app
  ports:
    - name: web-front-port
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: worldskills-back-service
  namespace: wsi-web
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /v1/health
spec:
  selector:
    app: cloudskills-back-app
  ports:
    - name: web-backend-port
      port: 8080
      targetPort: 8080
  type: NodePort
